--- a/src/main/resources/fxml/dashboard_reception.fxml
+++ b/src/main/resources/fxml/dashboard_reception.fxml
@@ -53,7 +53,7 @@
                 
                 <!-- Welcome Section -->
                 <VBox spacing="5" alignment="CENTER">
-                    <Label fx:id="welcomeLabel" text="Welcome" style="-fx-font-size: 14; -fx-font-weight: bold; -fx-text-fill: #2c3e50;"/>
+                    <!-- <Label fx:id="welcomeLabel" text="Welcome" style="-fx-font-size: 14; -fx-font-weight: bold; -fx-text-fill: #2c3e50;"/> -->
                     <Label fx:id="dateTimeLabel" text="" style="-fx-font-size: 11; -fx-text-fill: #7f8c8d;"/>
                 </VBox>
                 
