feat: add panel management and manual master-data setup

--- a/src/main/resources/fxml/dashboard_admin.fxml
+++ b/src/main/resources/fxml/dashboard_admin.fxml
@@ -40,6 +40,7 @@
                 
                 <Menu text="Test Configuration">
                     <MenuItem text="Test Definitions" onAction="#handleTestDefinitions"/>
+                    <MenuItem text="Panels" onAction="#handlePanels"/>
                     <MenuItem text="Departments" onAction="#handleTestCategories"/>
                     <MenuItem text="Test Recipes" onAction="#handleTestRecipes"/>
                     <MenuItem text="Reference Ranges" onAction="#handleReferenceRanges"/>
